--- a/src/main/resources/static/css/mypage/order-detail.css
+++ b/src/main/resources/static/css/mypage/order-detail.css
@@ -1,7 +1,7 @@
-button{
+ button{
 	white-space: nowrap;
 }
-
+/*
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
@@ -9,7 +9,7 @@ h1 {
 
 .head{
 	padding:0;
-}
+} */
 .order-date {
     font-size: 14px;
     margin-bottom: 20px;
