--- a/src/main/resources/templates/views/mypage/order-detail.html
+++ b/src/main/resources/templates/views/mypage/order-detail.html
@@ -28,7 +28,7 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 			                        <p class="product-title">해리포터와 마법사의 돌 외 1권</p>
 			                        <p class="product-price">17,000원</p>
 		                        </div>
-		                        <button class="cart-btn">장바구니 담기</button>
+		                        <button class="cart-btn">장바구니 다시 담기</button>
 		                    </div>
 		                </div>
 		                <div class="shipping-actions">
@@ -41,9 +41,10 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 	
 	            <div class="receiver-info">
 	                <h3>받는사람 정보</h3>
-	                <p>받는사람: 전종훈</p>
-	                <p>연락처: ***-****-****</p>
-	                <p>받는주소: 서울특별시 강남구 역삼동</p>
+	                <p>받는사람 : 이유진</p>
+	                <p>연락처 : 010-1234-5678</p>
+	                <p>받는주소 : 서울특별시 강남구 역삼동 76번지 33 110동 1107호</p>
+	                <p>공동현관 비밀번호 : 8277</p>
 	            </div>
 	
 	            <div class="payment-info">
