--- a/src/main/resources/static/css/mypage/account.css
+++ b/src/main/resources/static/css/mypage/account.css
@@ -31,7 +31,7 @@
 
 .info-form .form-group {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 15px;
 }
 
@@ -61,11 +61,17 @@
 }
 
 .info-form .postalcode {
-    width: 80px;
+    width: 80px !important;
 }
 
-.info-form .address {
+.address {
     flex: 1;
+    margin-bottom: 15px;
+    width: 667px;
+}
+
+.address-container{
+	flex: 1;
 }
 
 .change-userinfo{
