--- a/src/main/resources/templates/views/mypage/favorite.html
+++ b/src/main/resources/templates/views/mypage/favorite.html
@@ -3,8 +3,8 @@
 th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
 <head>
     <link rel="stylesheet" href="/css/mypage/sidebar.css">
+    <link rel="stylesheet" href="/css/mypage/favorite.css">
     <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts-wordcloud/dist/echarts-wordcloud.min.js"></script>
 </head>
 <main>
     <div class="flex">
@@ -15,46 +15,46 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                     <h1>나의 취향</h1>
                 </div>
                 
-                <!-- ECharts 예시 -->
-                <div id="chart1" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
-                <div id="chart2" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
-                <div id="main" style="width: 600px; height: 400px; border: 1px solid var(--grey);"></div>
+                <section class="favorite-header">
+	                <div id="chart1"></div>
+	                <div id="chart2"></div>
+                </section>
 
                 <script type="text/javascript">
-                    // 첫 번째 차트 초기화 및 옵션 설정
+                    // 첫 번째 차트
                     var chartDom1 = document.getElementById('chart1');
                     var myChart1 = echarts.init(chartDom1);
                     var option1 = {
-                        tooltip: {},
-                        xAxis: {
-                            data: ['문학', '사회과학', '철학', '어학', '예술', '만화']
+                        
+                        tooltip: {
+                            trigger: 'item',
+                            formatter: '{b}: {c} ({d}%)'
                         },
-                        yAxis: {
-                            interval: 5,
-                        },
-                        series: [{
-                            //name: '예제 데이터',
-                            type: 'bar',
-                            data: [5, 20, 36, 10, 10, 100]
-                        }]
-                    };
-                    myChart1.setOption(option1);
-
-                    // 두 번째 차트 초기화 및 옵션 설정
-                    var chartDom2 = document.getElementById('chart2');
-                    var myChart2 = echarts.init(chartDom2);
-                    var option2 = {
-                        tooltip: {},
                         legend: {
-                            //data: ['예제 데이터']
+                            orient: 'vertical',  // 범례를 수직으로 정렬
+                            left: '50%',  // 범례를 차트의 오른쪽에 위치
+                            top: 'center',  // 범례를 차트의 세로 가운데에 위치
+                            formatter: function (name) {
+                                var data = {
+                                    '문학': '1위: 소설/시/희곡 > 한국소설',
+                                    '사회과학': '2위: 사회과학 > 사회문제',
+                                    '철학': '3위: 에세이 > 사진/그림 에세이',
+                                    '어학': '4위: 소설/시/희곡 > 단편/중편소설',
+                                    '예술': '5위: 소설/시/희곡 > 프랑스소설',
+                                    '역사': '6위: 에세이 > 사진/그림 에세이'
+                                };
+                                return data[name];  // name 값에 따라 범례 항목의 내용을 설정
+                            }
                         },
                         series: [{
                             //name: '예제 데이터',
                             type: 'pie',
+                            radius: '50%',  // 원형 차트의 크기 설정
+                            center: ['25%', '50%'],
                             label: {
-                                //show: false // 레이블을 숨김
-                                position: 'inside', // 레이블을 원 안에 위치
-                                formatter: '{b}\n{d}%'  // 이름과 퍼센트를 표시
+                                show: false, // 레이블을 숨김
+                                //position: 'left',
+                                //formatter: '{b}\n{d}%'  // 이름과 퍼센트를 표시
                             },
                             labelLine: {
                                 show: false // 레이블 라인을 숨김
@@ -69,72 +69,27 @@ th:replace="~{views/commons/layout::layout(~{::head}, ~{::main})}">
                             ]
                         }]
                     };
+                    myChart1.setOption(option1);
+
+                    // 두 번째 차트
+                    var chartDom2 = document.getElementById('chart2');
+                    var myChart2 = echarts.init(chartDom2);
+                    var option2 = {
+                        
+                        tooltip: {},
+                        xAxis: {
+                            data: ['문학', '사회과학', '철학', '어학', '예술', '만화']
+                        },
+                        yAxis: {
+                            interval: 5,
+                        },
+                        series: [{
+                            //name: '예제 데이터',
+                            type: 'bar',
+                            data: [5, 20, 36, 10, 10, 50]
+                        }]
+                    };
                     myChart2.setOption(option2);
-                    
-                    //3번째 차트 표시
-         			// 워드 클라우드용 데이터 생성
-			        const wordCloudData = [
-			            { name: '경영학', value: 300 },
-			            { name: '동양문학', value: 270 },
-			            { name: '레크레이션, 행위예술', value: 240 },
-			            { name: '의학', value: 210 },
-			            { name: '총류', value: 180 },
-			            { name: '사회과학', value: 150 },
-			            { name: '예술', value: 120 },
-			            { name: '영미문학', value: 90 },
-			            { name: '상업, 무역', value: 60 },
-			            { name: '라틴어', value: 30 },
-			            { name: '기타문학', value: 20 },
-			        ];
-			
-			        // 데이터를 값에 따라 내림차순으로 정렬
-			        wordCloudData.sort((a, b) => b.value - a.value);
-			
-			        // 색상 배열 (값이 큰 순서대로 적용)
-			        const colors = ['#E0700E', '#FF9040', '#F49E51', '#7f7f7f'];
-			
-			        // 데이터에 색상 추가
-			        wordCloudData.forEach((item, index) => {
-			            item.textStyle = {
-			                color: index < 4 ? colors[index] : colors[3] // 5번째 이후부터는 네 번째 색상 사용
-			            };
-			        });
-			
-			        // ECharts 인스턴스 생성
-			        var chart = echarts.init(document.getElementById('main'));
-			
-			        // 차트 옵션 설정
-			        var option3 = {
-			            title: {
-			                text: '관심 도서 주제명', // 차트 제목
-			                left: 'center' // 제목을 중앙에 배치
-			            },
-			            tooltip: {
-			                show: true // 마우스 오버 시 툴팁 표시
-			            },
-			            series: [{
-			                type: 'wordCloud',
-			                gridSize: 15, // 글자 간 간격
-			                sizeRange: [20, 100], // 글자의 크기 범위 (최소 크기, 최대 크기)
-			                rotationRange: [0, 0], // 모든 단어가 0도 회전 상태로 정렬
-			                textStyle: {
-			                    normal: {
-			                        // color: function () {
-			                        //     // 여기서는 각 단어의 색상이 이미 설정되어 있으므로 이 부분은 무시될 수 있습니다.
-			                        //     return 'rgb(' + [
-			                        //         Math.round(Math.random() * 160),
-			                        //         Math.round(Math.random() * 160),
-			                        //         Math.round(Math.random() * 160)
-			                        //     ].join(',') + ')';
-			                        // }
-			                    },
-			                },
-			                data: wordCloudData // 워드 클라우드 데이터 설정
-			            }]
-			        };
-			
-			        // 차트 표시
-			        chart.setOption(option3);
                 </script>
             </div>
         </div>
