--- a/src/main/resources/static/css/chatbot/bot.css
+++ b/src/main/resources/static/css/chatbot/bot.css
@@ -1,27 +1,37 @@
+p{
+	font-size: 13px;
+	/* font-weight: bold; */
+	color: #323237;
+ 	font-weight: 400;
+ 	/*
+ 	font-style: normal;
+ 	*/
+}
 /*/////////////////////////*/
 /*///////  스크롤 바 ////////*/
 /*/////////////////////////*/
 /* 전체 스크롤바 */
 #chat-content::-webkit-scrollbar {
+	padding-right: 3px;
 	width: 8px; /* 스크롤바의 너비 */
 	height: 8px; /* 수평 스크롤바의 높이 (선택 사항) */
 }
 
 /* 스크롤바의 트랙 (배경) */
 #chat-content::-webkit-scrollbar-track {
-	background: #fff; /* 배경 색상 */
+	background: none; /* 배경 색상 */
 }
 
 /* 스크롤바의 핸들 (드래그 가능한 부분) */
 #chat-content::-webkit-scrollbar-thumb {
-	background: #888; /* 핸들의 색상 */
+	background: #f6a4a3; /* 핸들의 색상 */
 	border-radius: 4px; /* 핸들의 모서리 둥글게 */
 	border-radius: 5px;
 }
 
 /* 핸들을 호버했을 때 */
 #chat-content::-webkit-scrollbar-thumb:hover {
-	background: #555; /* 핸들을 호버했을 때의 색상 */
+	background: #fc9998; /* 핸들을 호버했을 때의 색상 */
 }
 /*/////////////////////////*/
 /*/////////////////////////*/
@@ -35,7 +45,8 @@
 	position: fixed; /* 화면의 특정 위치에 고정 */
 	bottom: 10%;
 	right: 60px;
-	background: white;
+	/*background: linear-gradient(to right, #fdc298, #f6a4a3);*/
+	background: #fff8f4;
 	border: 1px solid #ccc;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -48,9 +59,9 @@
 #bot-top {
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-	background-color: #ff9040;
 	height: 50px;
-	background-color: #ff9040;
+	/*background: linear-gradient(to right, #ff9040, #f36b6f);*/
+	background: linear-gradient(to right, #fdc298, #f6a4a3);
 }
 
 #input-container {
@@ -59,8 +70,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding-top: 10px;
-	background: #fff; /* 입력 필드와 버튼을 감싸는 배경색 */
+	background: #fff8f4; /* 입력 필드와 버튼을 감싸는 배경색 */
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
 }
@@ -68,17 +78,25 @@
 #question {
 	flex: 1;
 	padding: 10px;
+	padding-left: 20px;
 	border: none;
-	border-top: 1px solid #aaa; /* 입력 필드와 버튼 사이에 경계선 추가 */
+	border-top: 1px solid #f36b6f; /* 입력 필드와 버튼 사이에 경계선 추가 */
 	border-bottom-left-radius: 5px;
+	background: #fff8f4;
 }
 
 #send-button {
+	font-weight: 900;
+	font-size:16px;
+	
+	background: linear-gradient(to right, #f36b6f, #ff373d); /* 그라데이션 색상 */
+    -webkit-background-clip: text; /* 텍스트에만 배경을 클립 */
+    -webkit-text-fill-color: transparent; /* 텍스트 색상을 투명하게 만듦 */
+
 	padding: 10px;
+	padding-right: 20px;
 	border: none;
-	border-top: 1px solid #aaa;
-	border-left: 1px solid #aaa;
-	background-color: #fff;
+	border-top: 1px solid #ff373d;
 	cursor: pointer; /* 버튼에 클릭 가능 스타일 추가 */
 	border-bottom-right-radius: 5px;
 }
@@ -87,9 +105,6 @@
 /*/////////////////////////*/
 /*/////////////////////////*/
 #chat-content>div>div>div.part>p {
-	background-color: #ff9040;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
 	
 	padding: 10px;
 	position: relative;
@@ -98,11 +113,23 @@
 	margin: 0px;
 	padding: 10px;
 }
-#chat-content>div>div>div.part.chatbot>p {
+#chat-content>div>div>div.part.chatbot {
+	border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
+	/* background: linear-gradient(to right,#f7d2b7, #fdc298);  */
+	background:  #f7d2b7;
+	word-wrap: break-word; /* 줄바꿈 허용 */
+	max-width: 170px;
 }
 #chat-content>div>div>div.part.guest {
+	border-top-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
+	/* background: linear-gradient(to right, #ffc8c7, #f6a4a3);  */
+	background:  #ffc8c7;
+	word-wrap: break-word; /* 줄바꿈 허용 */
+	max-width: 170px;
 }
 
 /*/////////////////////////*/
@@ -114,7 +141,6 @@
 }
 /* 사용자 메시지 스타일 */
 .msg.user > .message >.part .guest {
-	background-color: #ff9040;
 	position: relative;
 	min-width: 50px;
 	max-width: 60%;
@@ -135,16 +161,13 @@
 	justify-content: flex-start;
 }
 #chat-content > div > div.icon > img{
-	border-radius: 30px;
-    width: 50px;
-    height: 45px;
-	padding: 10px;
+    width: 60px;
+    height: 60px;
+	padding: 5px;
 }
 
 /* 봇 메시지 스타일 */
 .msg.bot .message {
-	background-color: #FFF;
-	padding: 10px;
 	position: relative;
 	max-width: 60%;
 	word-wrap: break-word; /* 줄바꿈 허용 */
@@ -155,19 +178,20 @@
 /*/////////////////////////*/
 
 #chat-icon {
-	position: fixed; /* 화면의 특정 위치에 고정 */
+    margin-top: 20px; /* 챗봇 로고와 말풍선 사이 간격 */
+	position: fixed; /* 부모 요소를 기준으로 위치를 설정 */
 	bottom: 10%;
 	right: 60px;
 	cursor: pointer;
-	width: 80px; /* 이미지 크기 */
-	height: 80px; /* 이미지 크기 */
+	width: 100px; /* 이미지 크기 */
+	height: 100px; /* 이미지 크기 */
 }
 
 #close-button {
 	display:flex;
 	cursor: pointer;
 	font-size: 18px;
-	background: #ff9040;
+	background: none;
 	border: none;
 	border-radius: 4px;
 	position: absolute; /* 부모 요소를 기준으로 위치 조정 */
@@ -178,7 +202,7 @@
 
 
 #chat-content {
-	max-height: 375px;
+	max-height: 395px;
 	overflow-y: auto; /* 수직 스크롤이 필요할 때만 나타나게 함 */
 	overflow-x: hidden; /* 수평 스크롤 숨기기 */
 }
@@ -198,18 +222,23 @@
 	font-size: 12px;
 	display: flex;
 	align-items: flex-start; /* 좌측 상단 정렬 */
-	margin: 25px 0;
+	margin: 15px 0;
 	word-wrap: break-word; /* 단어가 줄바꿈 되도록 설정 */
+	
 }
 
 /* 메시지 시간 스타일 */
 .msg .time {
 	font-size: 0.8em;
 	color: #888;
+	/*
 	position: absolute;
-	bottom: -20px; /* 말풍선의 하단에 위치 */
-	right: 5px; /* 말풍선의 오른쪽 하단에 위치 */
-	margin: 0; /* 여백 제거 */
+	bottom: -20px; 
+	right: 5px; 
+	margin: 0; 
+	*/
+	text-align: right; /* 시간을 말풍선 내에서 오른쪽 정렬 */
+    margin-top: 5px; /* 시간과 말풍선 내용 사이의 간격 */
 }
 
 /* 날짜 스타일 */
@@ -222,9 +251,4 @@
 /* 버튼 아이콘 스타일 */
 #close-button>i {
 	font-size: 18px;
-}
-
-#send-button>i {
-	font-size: 20px;
-	color: #ff9040;
 }
