--- a/src/main/resources/templates/views/commons/layout.html
+++ b/src/main/resources/templates/views/commons/layout.html
@@ -12,13 +12,14 @@
 	
 	
 	<!-- 챗봇  -->
-  <script src="/js/chatbot/bot.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="/css/chatbot/bot.css"/>
+  	<script src="/js/chatbot/bot.js"></script>
 	<!-- //// -->
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
 	
-	<link rel="stylesheet" href="/css/chatbot/bot.css"/>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
     
 	<!--각 html 마다 적용-->
@@ -32,8 +33,7 @@
 	<!-- ///////// -->
 	<section>
 		    <!-- 챗봇 이미지 -->
-		    <img id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
-		
+		    <img class="animate__animated animate__pulse animate__slower animate__infinite" id="chat-icon" src="/img/bot/botlogo.png" alt="Chatbot Icon" />
 		    <!-- 챗봇 창 -->
 		    <div id="bot-container">
 		    	<div id="bot-top">
@@ -42,7 +42,7 @@
 		        <div id="chat-content"></div>
 		        <div id="input-container">
 		            <input type="text" id="question" placeholder="질문을 입력하세요." />
-		            <button id="send-button"><i class="ri-send-plane-line"></i></button>
+		            <button id="send-button">보내기</button>
 		        </div>
 		    </div>
 			
