--- a/src/main/resources/templates/views/login/login-admin.html
+++ b/src/main/resources/templates/views/login/login-admin.html
@@ -19,23 +19,27 @@
 
 		<!--로그인 버튼 부분-->
 		<section class="login-buttons-wrap">
+		
 			<button class="login-btn" onclick="window.location.href='/login'">회원 로그인</button>
-			<button class="login-btn admin-login-btn" onclick="window.location.href='/admin-login'">판매자 로그인</button>
+			<button class="login-btn admin-login-btn" onclick="window.location.href='/login/admin'">판매자 로그인</button>
 		</section>
 
 		<!--일반 사용자 로그인 부분-->
-		<section class="login-wrap">
-			<div class="login-id-wrap">
-				<input id="input-id" placeholder="사업자아이디" type="text">
-			</div>
-			<div class="login-pw-wrap">
-				<input id="input-pw" placeholder="비밀번호" type="password">
-			</div>
-			<div class="login-btn-wrap">
-				<button id="login-btn">로그인</button>
-			</div>
-			<div class="under-login"></div>
-		</section>
+		  <section class="login-wrap">
+            <form action="/login/admin" method="post">
+                <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : 'csrf'}"
+                       th:value="${_csrf != null ? _csrf.token : ''}"/>
+                <div class="login-id-wrap">
+                    <input id="input-id" name="businessNum" placeholder="사업자번호" type="text" required>
+                </div>
+                <div class="login-pw-wrap">
+                    <input id="input-pw" placeholder="비밀번호" name="password" type="password" required>
+                </div>
+                <div class="login-btn-wrap">
+                    <button id="login-btn" type="submit">로그인</button>
+                </div>
+            </form>
+        </section>
 
 
 		<!--아이디, 비밀번호 찾기 및 회원가입 부분-->
@@ -44,7 +48,7 @@
 				<span class="find-id">아이디찾기</span>
 				<span class="find-pw">비밀번호 찾기</span>
 				<span class="sign-up">
-					<a href="./signup">회원가입</a>
+					<a href="/signup">회원가입</a>
 				</span>
 			</div>
 		</section>
