--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -27,7 +27,8 @@
         <!-- 로그인 부분 -->
         <section class="login-wrap">
             <form action="/login" method="post">			
-					<input type="hidden" th:if="${_csrf != null}" name="${_csrf.parameterName}" th:value="${_csrf.token}"  />
+					          <input type="hidden" th:name="${_csrf != null ? _csrf.parameterName : '_csrf'}" 
+                       th:value="${_csrf != null ? _csrf.token : ''}"/>
 				<div class="login-id-wrap">
                     <input id="input-id" name="email" placeholder="아이디" type="text" required />
                 </div>
