--- a/src/main/resources/templates/views/index/event.html
+++ b/src/main/resources/templates/views/index/event.html
@@ -6,29 +6,33 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="/css/mainContent/eventRullret.css" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="/js/mainContent/eventRullret.js"></script>
 
 </head>
 <body>
 	<main>
 		<div id="wrap">
-            <div id="gameContainer">
-                <div class="board_start join">시작버튼</div>
-                <div class="board_on obj">
-                    <img src="img/cupon/cupon1.png" alt="상품1">
-                    <img src="img/cupon/cupon2.png" alt="상품2">
-                    <img src="img/cupon/cupon3.png" alt="상품3">
-                    <img src="img/cupon/cupon4.png" alt="상품4">
-                    <img src="img/cupon/cupon5.png" alt="상품5">
-                    <img src="img/cupon/cupon6.png" alt="상품6">
-                </div>
-            </div>
-            <div id="popup_gift" class="popup">
-                <div class="lottery_present"></div>
-                <a href="javascript:;" class="close">닫기</a>
-            </div>
-        </div>
+			<div class="backGC">
+				<div id="gameContainer">
+					<div class="board_start join">시작버튼</div>
+					<div class="board_on obj">
+						<img src="img/cupon/cupon1.png" alt="상품1"> <img
+							src="img/cupon/cupon2.png" alt="상품2"> <img
+							src="img/cupon/cupon3.png" alt="상품3"> <img
+							src="img/cupon/cupon4.png" alt="상품4"> <img
+							src="img/cupon/cupon5.png" alt="상품5"> <img
+							src="img/cupon/cupon6.png" alt="상품6">
+					</div>
+				</div>
+				<div class="text">"즉석 당첨! 룰렛을 돌려 특별한 혜택을 받아가세요!"</div>
+				<div id="popup_gift" class="popup">
+					<div class="lottery_present"></div>
+					<a href="javascript:;" class="close">닫기</a>
+				</div>
+			</div>
+		</div>
 	</main>
 </body>
 </html>
