--- a/src/main/resources/templates/views/index/serchBookList.html
+++ b/src/main/resources/templates/views/index/serchBookList.html
@@ -44,29 +44,25 @@
 								<input type="checkbox" class="bookCheckbox">
 							</div>
 							<div class="bookImg">
-								<img th:src="${book.thumbnail}" alt="Book"> <span><a
-									th:href="@{/detail/{id}(id=${book.id})}" target="_blank">새창보기</a></span>
-								<span class="chang"><a
-									th:href="@{/detail/{id}(id=${book.id})}">미리보기</a></span>
+								<img th:alt="${book.title}" th:src="${book.thumbnail}"
+									name="thumbnail"> <span><a href="/detail">새창보기</a></span>
+								<span class="chang"><a href="/detail">미리보기</a></span>
 							</div>
 							<div class="bookContent">
 								<h3>
-									<a th:href="@{/detail/{id}(id=${book.id})}"
-										th:text="${book.title}">제목</a>
+									<a href="/detail" name="title" th:text="${book.title}"></a>
 								</h3>
 								<h4>
-									<a th:href="@{/detail/{id}(id=${book.id})}"
-										th:text="${book.authors}">저자</a>
+									<a href="/detail" name="authors"
+										th:text="${#strings.listJoin(book.authors, ', ')}"></a>
 								</h4>
-								<h5
-									th:text="${#numbers.formatDecimal(book.price, 0, 'COMMA', 0, 'POINT')} + '원'">가격</h5>
-								<h6 th:text="${book.contents}">설명</h6>
+								<h5 name="price" th:text="${book.price + '원'}"></h5>
+								<h6 name="content" th:text="${book.contents}"></h6>
 							</div>
 							<div>
 								<p>당일배송</p>
 								<h5>
-									<strong
-										th:text="'오늘(' + ${#temporals.format(#temporals.createNow(), 'M/d,E')} + ')도착'">오늘(8/6,화)도착</strong>
+									<strong>오늘 도착</strong>
 								</h5>
 							</div>
 							<div class="button-container">
