feat:admin,seller

--- a/src/main/resources/templates/views/admin/users.html
+++ b/src/main/resources/templates/views/admin/users.html
@@ -21,6 +21,7 @@
 						<label>고객검색</label>
 						<select>
 							<option>이름</option>
+							<option>ID</option>
 							<option>전화번호</option>
 							<option>이메일</option>
 						</select> <input type="text" placeholder="검색">
