--- a/src/main/resources/templates/views/seller/review.html
+++ b/src/main/resources/templates/views/seller/review.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div style="display: flex;">
-		<th:block th:insert="~{views/admin/sidebar}" />
+		<th:block th:insert="~{views/seller/sidebar}" />
 		<div class="container">
 			<h1>리뷰 관리</h1>
 			<div class="search-box">
