--- a/src/main/resources/static/css/admin/commons.css
+++ b/src/main/resources/static/css/admin/commons.css
@@ -6,8 +6,6 @@ body {
 	
 }
 
-
-
 .container {
 	width:100%;
 	background-color: white;
@@ -54,6 +52,11 @@ label {
 }
 
 
+.long {
+	width: 500px;
+}
+
+
 input, select, button {
 	padding: 5px;
 	margin: 5px;
@@ -63,8 +66,7 @@ input, select, button {
 button {
 	background-color: white;
 	border: 1px solid #a9a9a9;
-	padding: 7px 15px;
-	
+	padding: 10px 20px;
 	border-radius: 3px;
 }
 
@@ -75,10 +77,15 @@ button {
 }
 
 .search-btn {
-	background-color: #ff9040;
+	background-color: #ccc;
 	color: white;
 	border: none;
 	
+}
+.delete-btn {
+	display:flex;
+	justify-content:flex-end;
+	margin:10px;
 }
 
 .inven-box {
@@ -111,6 +118,7 @@ th, td {
 th {
 	background-color: #f2f2f2;
 }
+
 
 .action-buttons button {
 	margin: 5px;
