--- a/src/main/resources/static/css/admin/write.css
+++ b/src/main/resources/static/css/admin/write.css
@@ -1,49 +1,166 @@
 @charset "UTF-8";
 body {
-    font-family: Arial, sans-serif;
+	font-family: Arial, sans-serif;
+	background-color: #f0f0f0;
 }
 
 .container {
-    width: 700px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+	width: 100%;
+	background-color: white;
+	padding: 20px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	margin: 20px;
+}
+
+.line {
+	border-top:1px solid #ccc;
+	padding:20px;
+	margin-top: 10px
+}
+
+.product-form {
+	margin: 20px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
+	width: 100%;
+	border-collapse: collapse;
 }
 
 th, td {
-    padding: 10px;
-    border: 1px solid #ddd;
+	padding: 10px;
+	border-top: 1px solid #ddd;
 }
 
 th {
-    width: 150px;
-    background-color: #f2f2f2;
-    text-align: left;
+	background-color: #f2f2f2;
+	text-align: left;
+	font-weight: bold;
 }
 
-td input[type="text"],
-td input[type="date"],
-td textarea,
-td select,
-td input[type="file"] {
-    width: calc(100% - 22px);
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+td input, td textarea {
+	width: calc(100% - 20px);
+	padding: 8px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
+
+td #product-name, td #price, td #product-code, td #short-description {
+	width: 300px;
 }
 
 td textarea {
-    height: 100px;
-    resize: none;
+	height: 140px;
+	resize: vertical;
 }
 
-td input[type="checkbox"] {
-    margin-left: 10px;
+
+.btn-file {
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 100px;
+	height: 100px;
+	border: 0.5px dotted #d9d9d9;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.file-guide {
+	color: green;
+	font-size: 12px;
+}
+
+.btn-write {
+	display:flex;
+	justify-content:flex-end;
+	margin:10px;
+	
+}
+
+button {
+	background-color:#ff9040;
+	color: white;
+	padding: 10px 20px;
+	border-radius: 3px;
+	border: none;
+}
+
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 10px;
+	border: 1px solid #ddd;
+}
+
+th {
+	background-color: #f2f2f2;
+	text-align: left;
+	font-weight: bold;
+}
+
+td input, td textarea {
+	width: calc(100% - 20px);
+	padding: 8px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
+
+td #product-name, td #price, td #product-code, td #short-description {
+	width: 300px;
+}
+
+td textarea {
+	height: 140px;
+	resize: vertical;
+}
+
+ .date-input-container {
+        display: flex;
+        align-items: center;
+    }
+    .date-input-container input[type="date"] {
+        width: 150px; /* 필요에 따라 너비 조정 */
+        margin-right: 8px;
+    }
+    .date-input-container span {
+        margin: 0 8px;
+    }
+
+
+.btn-file {
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 100px;
+	height: 100px;
+	border: 0.5px dotted #d9d9d9;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.file-guide {
+	color: green;
+	font-size: 12px;
+}
+
+.btn-write {
+	display:flex;
+	justify-content:flex-end;
+	margin:10px;
+	
+}
+
+button {
+	background-color:#ff9040;
+	color: white;
+	padding: 10px 20px;
+	border-radius: 3px;
+	border: none;
 }
