--- a/src/main/resources/templates/views/seller/sidebar.html
+++ b/src/main/resources/templates/views/seller/sidebar.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
 	<nav class="sidebar">
-		<a href="/admin"><img src="/img/logo7.png" class="logo"></a>
+		<a href="/seller"><img src="/img/logo7.png" class="logo"></a>
 		<div class="user-info">
 			<img>
 			<p>북북출판사</p>
@@ -11,43 +11,43 @@
 			<li>
 				<a class="menu">상품 관리</a>
 				<ul class="submenu">
-					<li><a href="/admin/inventory">상품목록</a></li>
-					<li><a href="/admin/inventory/write">상품등록</a></li>
+					<li><a href="/seller/inventory">상품목록</a></li>
+					<li><a href="/seller/inventory/write">상품등록</a></li>
 				</ul>
 			</li>
 			<li>
 				<a class="menu">주문 관리</a>
 				<ul class="submenu">
-					<li><a href="/admin/order">주문내역</a></li>
-					<li><a href="/admin/order/refund">취소/환불</a></li>
-					<li><a href="/admin/order/exchange">불량/교환</a></li>
+					<li><a href="/seller/order">주문내역</a></li>
+					<li><a href="/seller/order/refund">취소/환불</a></li>
+					<li><a href="/seller/order/exchange">불량/교환</a></li>
 				</ul>
 			</li>
 			<li>
 				<a class="menu">사용자 관리</a>
 				<ul class="submenu">
-					<li><a href="/admin/users">고객 관리</a></li>
-					<li><a href="/admin/sellers">출판사 관리</a></li>
+					<li><a href="/seller/users">고객 관리</a></li>
+					<li><a href="/seller/sellers">출판사 관리</a></li>
 				</ul>
 			</li>
 			<li>
 				<a class="menu">리뷰 관리</a>
 				<ul class="submenu">
-					<li><a href="/admin/review">리뷰 보기</a></li>
+					<li><a href="/seller/review">리뷰 보기</a></li>
 				</ul>
 			</li>
 			<li><a class="menu">클라우드</a></li>
 			<li>
 				<a class="menu">프로모션 및 쿠폰</a>
 				<ul class="submenu">
-					<li><a href="/admin/promotion">이벤트 목록</a></li>
-					<li><a href="/admin/promotion/write">이벤트 등록</a></li>
+					<li><a href="/seller/promotion">이벤트 목록</a></li>
+					<li><a href="/seller/promotion/write">이벤트 등록</a></li>
 				</ul>
 			</li>
 			<li>
 				<a class="menu">문의관리</a>
 				<ul class="submenu">
-					<li><a href="/admin/inquiry">문의 보기</a></li>
+					<li><a href="/seller/inquiry">문의 보기</a></li>
 				</ul>
 			</li>
 		</ul>
