--- a/src/main/resources/templates/views/seller/inventory-write.html
+++ b/src/main/resources/templates/views/seller/inventory-write.html
@@ -100,6 +100,20 @@
 										<input type="hidden" name="orgName">
 										<span>+</span>
 									</label>
+									<label class="btn-file">
+										<input type="file" id="itemFile" onchange="fileupload(this)"
+											style="display: none;">
+										<input type="hidden" name="bucketKey">
+										<input type="hidden" name="orgName">
+										<span>+</span>
+									</label>
+									<label class="btn-file">
+										<input type="file" id="itemFile" onchange="fileupload(this)"
+											style="display: none;">
+										<input type="hidden" name="bucketKey">
+										<input type="hidden" name="orgName">
+										<span>+</span>
+									</label>
 									<!--이미지가 추가되면 레이블태그가 추가되도록 js를 만드세요-->
 									<p class="file-guide">
 										<span>권장 크기 : 1000 X 1000(윈도 대상 750 X 1000), 300 X 300 이상</span><br>
