--- a/src/main/resources/static/css/mypage/favorite.css
+++ b/src/main/resources/static/css/mypage/favorite.css
@@ -5,14 +5,84 @@
 	padding-right: 0;
 }
 
-
+#chart2{
+	height:250px;
+}
 .favorite-header{
     display: flex;
 }
 
-.favorite-header > div {
+.chart-container{
+	width: 440px;
+	height: 280px;
+	border: 1px solid var(--grey);
+	margin-right: 5px;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center
+}
+.chart-text{
+	padding-left: 35px;
+}
+.chart-name{
+	font-size: 20px;
+	font-weight: bold;
+}
+.chart-info{
+	font-size: 13px;
+	margin-left: 10px;
+	color: var(--dark-grey);
+}
+.bar-chart{
+	margin-top: 25px;
+}
+
+.chart {
     width: 440px; 
-    height: 300px; 
-    border: 1px solid var(--grey);
-    margin-right: 5px;
+    height: 200px; 
+}
+
+
+/* 찜 목록 */
+.wish-list{
+	border: 1px solid var(--grey);
+	border-radius: 5px;
+	margin: 10px 0;
+	width: 99%;
+}
+.wish-text{
+	padding: 35px;
+}
+.book-grid {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    gap: 10px;
+    margin: 0 auto;
+}
+
+.book-item {
+    background-color: #fff;
+    padding: 15px;
+    text-align: center;
+}
+
+.book-item img {
+    width: 120px;
+    height: 150px;
+    background-color: #d9d9d9;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.book-item h3 {
+    font-size: 1rem;
+    margin: 0 0 10px;
+    color: #333;
+}
+
+.book-item p {
+    font-size: 0.875rem;
+    color: #777;
+    margin: 0;
 }
