--- a/src/main/resources/templates/views/login/login.html
+++ b/src/main/resources/templates/views/login/login.html
@@ -54,15 +54,15 @@
                 <div class="easy-login-box">
                     <div class="kakao-login-ko">
                         <img src="/img/kakao.png" alt="Kakao Login">
-                        <a href="https://kauth.kakao.com/oauth/authorize" target="_blank" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/kakao" target="_blank" title="카카오 아이디로 로그인">카카오 아이디로 로그인</a>
                     </div>
                     <div class="naver-login-ko">
                         <img src="/img/naver.png" alt="Naver Login">
-                        <a href="https://nid.naver.com/nidlogin.login" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/naver" target="_blank" title="네이버 아이디로 로그인">네이버 아이디로 로그인</a>
                     </div>
                     <div class="google-login-ko">
                         <img src="/img/google.png" alt="Google Login">
-                        <a href="https://accounts.google.com/o/oauth2/auth" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
+                        <a href="/oauth2/authorization/google" target="_blank" title="구글 아이디로 로그인">구글 아이디로 로그인</a>
                     </div>
                 </div>
             </div>
