--- a/src/main/resources/templates/views/index/serchBookList.html
+++ b/src/main/resources/templates/views/index/serchBookList.html
@@ -2,9 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{views/commons/layout::layout(~{::head} ,~{::main} ) }">
 <head>
+<meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/mainContent/bookList.js"></script>
 <link rel="stylesheet" href="/css/mainContent/bookList.css" />
+
 
 </head>
 <body>
@@ -45,18 +47,18 @@
 							</div>
 							<div class="bookImg">
 								<img th:alt="${book.title}" th:src="${book.image}"
-									name="thumbnail"> <span><a href="/detail">새창보기</a></span>
-								<span class="chang"><a href="/detail">미리보기</a></span>
+									name="thumbnail"> <span><a th:href="@{'/detail/' + ${book.isbn}}">새창보기</a></span>
+								<span class="chang"><a th:href="@{'/detail/' + ${book.isbn}}">미리보기</a></span>
 							</div>
 							<div class="bookContent">
 								<h3>
-									<a href="/detail" name="title" th:text="${book.title}"></a>
+									<a th:href="@{|/detail/${book.isbn}|}" name="title" th:text="${book.title}"></a>
 								</h3>
 								<h4>
-									<a href="/detail" name="authors" th:text="${book.author}"></a>
+									<a th:href="@{|/detail/${book.isbn}|}" name="authors" th:text="${book.author}"></a>
 								</h4>
-								<h5 name="price"
-									th:text="${book.price != null ? book.price + '원' : '가격 정보 없음'}"></h5>
+								<!-- <p th:text="${book.isbn}"></p> -->
+								<h5 name="price" th:text="${book.discount != null ? #numbers.formatDecimal(book.discount, 0, 'COMMA', 0, 'POINT') + '원' : '가격 정보 없음'}"></h5>
 								<h6 name="content" th:text="${book.description}"></h6>
 							</div>
 							<div>
